--- a/mern-exercise-tracker/package.json
+++ b/mern-exercise-tracker/package.json
@@ -2,7 +2,7 @@
   "name": "mern-exercise-tracker",
   "version": "0.1.0",
   "private": true,
-  "main": "/mern-exercise-tracker/build/index.js",
+  "main": "index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
